--- a/package.json
+++ b/package.json
@@ -6,12 +6,26 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "export": "next export",
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/anatomy": "^2.0.6",
+    "@chakra-ui/icons": "^2.0.10",
+    "@chakra-ui/react": "^2.2.8",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "firebase": "^9.9.1",
+    "framer-motion": "^6.5.1",
+    "lodash.debounce": "^4.0.8",
+    "lodash.kebabcase": "^4.1.1",
     "next": "12.2.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.0.3",
+    "react-hook-form": "^7.34.0",
+    "react-hot-toast": "^2.3.0",
+    "react-markdown": "^8.0.3"
   },
   "devDependencies": {
     "eslint": "8.20.0",
